[package]
name = "monkey-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
once_cell = "1.8.0"


[dev-dependencies]
criterion = "*"


[[bench]]
name = "benchmark"
harness = false

[lib]
name = "monkey_rs"
path = "src/lib.rs"
